--- a/testg++/Makefile
+++ b/testg++/Makefile
@@ -1,7 +1,7 @@
 CC = g++
 CFLAGS = -std=c++11
 LDFLAGS = -L./opencv
-LIBS = -lopencv_core -lopencv_highgui -lopencv_imgcodecs -ltbb -ljpeg -ltiff -lIlmImf -lgdal
+LIBS = -lopencv_core -lopencv_highgui -lopencv_imgcodecs
 INCLUDES = -I./opencv/opencv4
 
 all: main
